test/all/illegal_interface.space/baseline/simulate/illegal_interface.space
hello
return
test/all/illegal_interface.space/illegal_interface.space.dzn:29:3: error: deadlock
<deadlock>
